--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="title">Etch-a-Sketch</div>
+    <button class="custom-btn">Custom Grid</button>
+    <div class="grid-container"></div>
 </body>
 </html>
